<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.home.HomeFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sentence_similarity"
                android:textSize="14sp"
                android:textColor="@color/colorGray"
                android:layout_marginBottom="8dp"/>

        <EditText
                android:id="@+id/defaultSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/source_sentence"
                android:inputType="text"
                android:autofillHints=""/>

        <!-- 子标题 -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sentences_to_compare_to"
                android:textSize="14sp"
                android:textColor="@color/colorGray"
                android:layout_marginBottom="8dp"/>

        <LinearLayout
                android:id="@+id/textContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

            <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_sentence"
                    android:layout_marginEnd="8dp"
                    style="?android:attr/buttonBarButtonStyle"/>

            <Button
                    android:id="@+id/computeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compute"
                    style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>